--- a/web/dan_copy_me_and_rename/1_hello_world.html
+++ b/web/dan_copy_me_and_rename/1_hello_world.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    Hello World!
+    Hello Weirdo! I'm not sure if this works...It's not right now but I'm tired and am not particularly trusting of my abilities. 
+    
+    <p>It's working now, wonderful.</p>
 
     <!-- This is a comment! This doesn't show up in the webpage. -->
 
