--- a/web/dan_copy_me_and_rename/3_html_elements.html
+++ b/web/dan_copy_me_and_rename/3_html_elements.html
@@ -12,16 +12,25 @@
 
    <h4>Heading elements</h4>
 
-    <p>The heading (h1 to h6) elements in HTML are used to define hierarchical levels of importance for text. h1 is the highest level, typically used for main headings, while h6 is the lowest, often used for subheadings or less important titles. They help structure content for readability and accessibility, with larger numbers indicating decreasing importance and size.</p>
+    <p>The heading (h1 to h6) elements in HTML are used to define hierarchical levels of importance for text. 
+      h1 is the highest level, typically used for main headings, while h6 is the lowest, often used for subheadings 
+      or less important titles. They help structure content for readability and accessibility, with larger numbers 
+      indicating decreasing importance and size.</p>
 
     <h4>Paragraph element</h4>
 
-    <p>The 'p' element (that this text you're reading is contained in) is a 'paragraph' element. The p element in HTML represents a paragraph of text, typically used to group and format blocks of content that form cohesive units. It automatically adds spacing before and after the paragraph, making it ideal for organizing and presenting textual information on a webpage.</p>
+    <p>The 'p' element (that this text you're reading is contained in) is a 'paragraph' element. The p element in 
+      HTML represents a paragraph of text, typically used to group and format blocks of content that form cohesive units. 
+      It automatically adds spacing before and after the paragraph, making it ideal for organizing and presenting textual 
+      information on a webpage.</p>
 
     <h4>DIV element</h4>
 
     <p>Here are 'DIV' elements below! 
-      A div element in HTML is a fundamental building block used to structure and organize content on a webpage. It acts like a general-purpose container or a box that can hold other HTML elements like text, images, or other divs. By applying CSS styles to divs, you can control their appearance, layout, and positioning on the page, making them versatile for creating columns, sections, or entire layouts.</p>
+      A div element in HTML is a fundamental building block used to structure and organize content on a webpage. It acts
+       like a general-purpose container or a box that can hold other HTML elements like text, images, or other divs. By 
+       applying CSS styles to divs, you can control their appearance, layout, and positioning on the page, making them 
+       versatile for creating columns, sections, or entire layouts.</p>
 
     <div>
       Week of 9/4/2024
@@ -40,7 +49,8 @@
 
     <h4>Image elements</h4>
 
-    An image element.. inserts an image. <b>NOTE:</b> These elements often don't have separate tags, but open and close in the same tag, as what's known as "self-closing tags". Notice the slash before the end bracket.
+    An image element.. inserts an image. <b>NOTE:</b> These elements often don't have separate tags, but open and close 
+    in the same tag, as what's known as "self-closing tags". Notice the slash before the end bracket.
     <img src="images/motion_and_light_study.jpg" />
     
     <h4>List elements</h4>
