changed fonts to roboto mono

--- a/web/7_index.html
+++ b/web/7_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Violet Moore Index</title>
@@ -10,6 +13,10 @@
         background-color: rgb(240,240,240);
       }
       .date {
+        font-family: "Roboto Mono", system-ui;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
         font-size:1.1em;
         font-weight: bold;
         font-family: monospace;
@@ -21,7 +28,7 @@
       /* CSS styles for .day-report */
 
       .day-report {
-        font-size: 1.1em; /* font size can be in 'em' or in pixels 'px' */
+        font-size: .8em; /* font size can be in 'em' or in pixels 'px' */
         max-width: 400px; /* width! can you specify height? */ 
         padding: 20px; /* the padding around the content */ 
         border: 1px dashed #777; /* 'thickness', 'style', and 'color' in order. #777 is an abbreviation for #777777 here! */
@@ -30,7 +37,10 @@
         font-weight: normal; /* try changing this to 'bold' */
         margin-bottom: 20px;
         text-align: justify;
-        font-family: monospace;
+        font-family: "Roboto Mono", system-ui;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
       }
 
 
@@ -52,7 +62,10 @@
       <h2>violet moore</h2>
     <div class="day-report">
         <div class="date">24 SEPT 2024</div>
-       <div class="description">i will tidy</div>
+       <div class="description">i’m beyond tired and feel i can only do one track. one back one forth, so two. i will clear out my bag and prepare somewhat for tomorrow. it’s nearly 1230 and it feels absurd to do it in this manner. what if i didn’t do it perfectly but just did something?
+        <p>to be tidied: water bottle, towel,  bags, pants, charge phone, recycle tissue box.</p>
+        <p>i forgot to time myself but i think it’s about 14 minutes. in addition to the list, i did the dishes. i started writing at 1216 and did so for not more than two minutes. a small goal felt easy enough and i did it, while still following the line.</p>
+      </div>
          </div>  
       <div class="day-report">
         <div class="date">23 SEPT 2024</div>
