Revert "Zequan Yu Assignment 3"

--- a/index.html
+++ b/index.html
@@ -1,80 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index Template</title>
-    <style>
+	<head>
+		<title>Metatool: Attentional Mediums</title>
+		<link href="style.css" rel="stylesheet" />
+	</head>
+	<body>
+		<div id="bodycontainer">
+			<div class="classheader">
+				<div class="title">Metatool: Attentional Mediums</div>
+			</div>
 
-      body {
-        background-color: rgb(240,240,240);
-      }
+			<div class="classinfo">
+				Instructor: Dan Taeyoung <br />
+				dan@dantaeyoung.com | dan.taeyoung@columbia.edu <br />
+				Columbia GSAPP | Fall 2024 <br />
+				Avery 115 | Wednesdays 7 PM - 9 PM <br />
+			</div>
 
-      .container  {
-        padding: 40px;
-      }
+			<div class="images">
+				<img src="images/metatool_structure.png" />
+			</div>
 
-      /* CSS styles for .day-report */
+			<div class="images-caption">
+				Metatool: Attentional Mediums is an experimental, experiential, cooperatively-run course on exploring how space and technology are mediums that shape our attention.
+			</div>
 
-      .day-report {
-        font-size: 1.2em; /* font size can be in 'em' or in pixels 'px' */
-        width: 1150px; /* width! can you specify height? */
-        height:  200px; /* width! can you specify height? */ 
-        padding: 50px; /* the padding around the content */ 
-        border: 1px dashed #777; /* 'thickness', 'style', and 'color' in order. #777 is an abbreviation for #777777 here! */
-        background-color: #333333; /* colors can be specified in either HEX or rgb */
-        color: rgb(202, 201, 201);
-        margin-bottom: 4px;
-      }
+			<div class="rounded-rectangle">
+				You are tasked with becoming a researcher <br />in an experimental class on space and attention.
+				<br/><br />
+				The goal is to develop a hybrid between  <br />
+			<b>an attentional technique</b> and <br />
+			<b>a spatial & technological intervention</b> <br />
+through practice and experience. 
+			</div>
 
-      .date {
-        font-size: 1.62em; /* font size can be in 'em' or in pixels 'px' */
-        color: rgb(100, 100, 100);
-        font-weight: bold; /* try changing this to 'bold' */
-      }
-
-      .title {
-        font-size: 1.62em; /* font size can be in 'em' or in pixels 'px' */
-        font-weight: bold;
-        color: rgb(232, 110, 105);
-        margin-top: 0px;
-        margin-bottom: 40px;
-        font-weight: bold; /* try changing this to 'bold' */
-      }
-
-      .description {
-        font-size: 1.2em; /* font size can be in 'em' or in pixels 'px' */
-        color: rgb(202, 201, 201);
-        font-weight: normal; /* try changing this to 'bold' */
-      }
+			
 
 
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h2>Index Template</h2>
-
-      <h3>Instructions:</h3>
-      <ol>
-        <li>Copy this page and rename it 'index.html'.</li>
-        <li>Notice that when you do so, going to the root directory (e.g. '/people/dan_copy_me_and_rename/') results in going directly to this page.</li>
-        <li>(This is because 'index.html' is a special name for a webpage filename. When files are named 'index.html', they represent the root directory. (Notice how this repository itself has an 'index.html' page at the root of its directory!)) </li>
-        <li>Style this page and please write your documentation here!</li>
-      </ol>
-
-
-      <div class="day-report">
-        <div class="date">9/25/2024</div>
-        <div class="title">Observation on affordances and intervention</div>
-        <div class="description"> 
-          Using a foam roller and yoga mat for extra comfort while sitting on the couch makes reading more enjoyable. Surprisingly, exercising while reading, like rolling my legs, not only keeps me engaged but also helps me think faster and concentrate better. I thought it would be distracting, but it actually enhances my focus. </div>
-      </div>
-
-      <img src="affordance 1.jpg" />
-      <img src="affordance 2.jpg" />
-
-    </div>
-
-  </body>
+		</div>
+	</body>
 </html>
