Consolidating student_practice files

--- a/student_practice/Zequan/web/4_intro_to_css.html
+++ b/student_practice/Zequan/web/4_intro_to_css.html
@@ -10,34 +10,24 @@
 
       .day-report {
         font-size: 1.2em; /* font size can be in 'em' or in pixels 'px' */
-        width: 795px; /* width! can you specify height? */
-        height: 370px; /* width! can you specify height? */ 
-        padding: 50px; /* the padding around the content */ 
+        width: 300px; /* width! can you specify height? */ 
+        padding: 20px; /* the padding around the content */ 
         border: 1px dashed #777; /* 'thickness', 'style', and 'color' in order. #777 is an abbreviation for #777777 here! */
-        background-color: #333333; /* colors can be specified in either HEX or rgb */
-        color: rgb(202, 201, 201);
-        margin-left: 5px;
+        background-color: #FFFFFF; /* colors can be specified in either HEX or rgb */
+        color: rgb(0,0,0);
+        font-weight: normal; /* try changing this to 'bold' */
       }
 
       .date {
-        font-size: 1.62em; /* font size can be in 'em' or in pixels 'px' */
-        color: rgb(100, 100, 100);
-        font-weight: bold; /* try changing this to 'bold' */
       }
 
       .title {
-        font-size: 1.62em; /* font size can be in 'em' or in pixels 'px' */
         font-weight: bold;
-        color: rgb(232, 110, 105);
         margin-top: 0px;
-        margin-bottom: 40px;
-        font-weight: bold; /* try changing this to 'bold' */
+        margin-bottom: 0px;
       }
 
       .description {
-        font-size: 1.5em; /* font size can be in 'em' or in pixels 'px' */
-        color: rgb(202, 201, 201);
-        font-weight: Bold; /* try changing this to 'bold' */
       }
 
 
