--- a/student_work/violet/index.html
+++ b/student_work/violet/index.html
@@ -1,16 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-        <meta charset="UTF-8" />
+    <head>
     <title>Project Title - Attention Theory</title>
     <link href="style.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
+        text-align: justify;
       }
 
       @page {
@@ -21,8 +19,8 @@
         page-break-after: always;
       }
 
-      h1,
-      h2 {
+      h2,
+      h3 {
         text-align: center;
       }
 
@@ -44,44 +42,46 @@
   </head>
   <body>
     <div id="bodycontainer">
-      <h1>tidy line</h1>
-      <h2>violet moore</h2>
+      <h2>tidy line</h2>
+      <h3>violet moore</h3>
 
       <div class="project_description">
-        <h3>Description</h3>
-        <p>A short 2-3 line description of your project goes here.</p>
+        <h4>description</h4>
+        <p>as of today, tidy line has been a 70 day long experiment established around a combination of observational writing and daily interventions. the writing is usually centered around what is to be straightened up that evening, and the action is straightening up. the writing began as a tracing: a tracing of action, experience, and attention. it has held onto these aspect but has since evolved to a tidying in and of itself; a tidying of my mind.</p>
       </div>
 
       <div class="project_images">
-        <h3>Photos/Diagrams</h3>
+        <h4>the line</h4>
         <div class="project_image">
-          <img src="01-FRANZ-ERHARD-WALTHER-1968.jpg" />
-          <div class="project_image_caption">
-            Franz Erhard Walther, ‘Handlungsstücke’ (Action Pieces)
-          </div>
-        </div>
-        <div class="project_image">
-        <img src="coffee_seeks_its_own_level.jpg" />
-          <div class="project_image_caption">
-            <a href="http://www.allanwexlerstudio.com/projects/coffee-seeks-its-own-level">Allan Wexler, Coffee Seeks Its Own Level, 1990</a>
+          <embed src="tidy line 1.pdf" type="application/pdf" width="600" height="400">
           </div>
         </div>
       </div>
 
+        <div class="project_image">
+          <embed src="tidy line 2.pdf" type="application/pdf" width="600" height="400">
+          </div>
+        </div>
+      </div>
+
+        <div class="project_image">
+          <embed src="tidy line 3.pdf" type="application/pdf" width="600" height="400">
+          </div>
+        </div>
+      </div>
+      
       <div class="attention-theory">
-        <h3>attentional theory</h3>
+        <h4>attentional theory</h4>
         <p>
-          Ponder on your relationship to your attention. What kind of model or
-          metaphor of attention is your project articulating? Is your attention
-          something you are exercising, like a muscle? Something that is being
-          disciplined, like a pet? Something that is shaped, like a ball of
-          clay? Or something else? What kind of relationship to your attention
-          is your project hoping to shape? (300 words)
+            excerpt from 17 november 2024
+            <p>well now i’m feeling distracted in a way mostly that i don’t want to share, as this project’s front facing aspect is coming to a close. i all of a sudden have a feeling that my words are not so much mine any more. that maybe someday you, whoever you are, will be reading this. as i sit here on my couch at 11:44 pm. my apartment is 64 degrees and i have a heating pad on my shoulders. there are lots of things i want cleaned and yet very little i want to touch. most of the lights are on and despite it being late it feels like it could just as well be 5 pm. the heating pad is at 137 degrees and is warming my upper body. i have a blanket on my shoulders as well. 64 degrees shouldn’t feel as cold as it does now, but it probably has something to do with the fact that i left the window open because the humidifier is broken and i haven’t bought a new pump for it.</p>
+            
+            this is the second time in this practice that i am writing specifically for someone else to read now. the first time was earlier and if you didn’t see it, it’s up to you to find it. and if you’ve gotten this far, i hope you have found something. it feels rather intimate to write like this, to simultaneously write to you, but the only you i can imagine, really, is an extension of myself. for you are probably too far away to talk to about all of this. or maybe i am—too far away from this practice, from this writing. when this is printed or displayed on a website, it will similarly be far away from me. it will no longer be an editable file but a quiescent article. perhaps i can think of it not so much an ending nor a beginning but an expression of where this is now. or rather where this is in two or three days time. there is an oddity to producing something after so much rearranging. maybe that is what producing ends up being a lot of the time, in fact, a rearranging parts of that are already here…though producing may differ from cleaning in the sense that producing may require putting one thing in a new place.
         </div>
     </p>
       <div class="log">
-        <h3>log</h3>
-        <embed src="1_FINAL METATOOL LOG.pdf" type="application/pdf" width="600" height="800">
+        <h4>log</h4>
+        <embed src="metatool log.pdf" type="application/pdf" width="800" height="1000">
 
 
         </div>    
