website - the mind dial
updated the website with images

--- a/jcp-website-the dial in template.html
+++ b/jcp-website-the dial in template.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
+        text-align: justify;
       }
 
       @page {
-        size: A3 landscape;
+        size: A3 portrait;
       }
 
       .container {
@@ -53,13 +54,13 @@
       <div class="project_images">
         <h3>Photos/Diagrams</h3>
         <div class="project_image">
-          <img src="A:\COLUMBIA UNIVERSITY\07. FALL SEMESTER 2024\4. VISUAL COURSE - DAN TAEYOUNG\FINAL REVIEW\conceptual sketch.jpg" />
+          <img src="conceptual sketch.jpg" width="600" height="600" />
           <div class="project_image_caption">
             Attentional artifiact - The Mind Dial - concept - the interplay between an attentional artifact, the human brain, and journaling activity.
           </div>
         </div>
         <div class="project_image">
-        <img src="A:\COLUMBIA UNIVERSITY\07. FALL SEMESTER 2024\4. VISUAL COURSE - DAN TAEYOUNG\FINAL REVIEW\METATOOL I - Assigmnet Due 11.20.jpg"/>
+        <img src="view of the prototype - labels.jpg"width="600" height="700"/>
         <div class="project_image_caption">
           Attentional artifiact - The prototype
         </div>
