--- a/web/dan_copy_me_and_rename/jcp-website-the dial in template.html
+++ b/web/dan_copy_me_and_rename/jcp-website-the dial in template.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
+        text-align: justify;
       }
 
       @page {
-        size: A3 landscape;
+        size: A4 portrait;
       }
 
       .container {
@@ -47,19 +48,21 @@
         <h3>Description</h3>
         <p>An attentional artifact that provides the user different attentional modes to facilitate focus, relaxation, and creative thinking while journaling by setting the environment's lighting to the user's choice of attention level. This innovative device can be programmed to adjust the lighting based on the user's preferences and needs, creating a personalized and conducive atmosphere for journaling. Additionally, the attentional artifact can also be synced with music or ambient sounds to further enhance the user's experience and productivity. 
 
-        </p>
+        </p> 
       </div>
 
       <div class="project_images">
         <h3>Photos/Diagrams</h3>
         <div class="project_image">
-          <img src="A:\COLUMBIA UNIVERSITY\07. FALL SEMESTER 2024\4. VISUAL COURSE - DAN TAEYOUNG\FINAL REVIEW\conceptual sketch.jpg" />
+          <img src="conceptual sketch.jpg" width="260" height="260">
           <div class="project_image_caption">
             Attentional artifiact - The Mind Dial - concept - the interplay between an attentional artifact, the human brain, and journaling activity.
           </div>
+
+
         </div>
         <div class="project_image">
-        <img src="A:\COLUMBIA UNIVERSITY\07. FALL SEMESTER 2024\4. VISUAL COURSE - DAN TAEYOUNG\FINAL REVIEW\METATOOL I - Assigmnet Due 11.20.jpg"/>
+        <img src="view of the prototype - labels.jpg" width="260" height="360"/>
         <div class="project_image_caption">
           Attentional artifiact - The prototype
           <a href="http://127.0.0.1:5500/jcp-website-the%20dial%20in%20template.html">Main Page</a>
