--- a/student_work/Adnan/index.html
+++ b/student_work/Adnan/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Project Title - Attention Theory</title>
+    <title>Attention Seeking - Escapism to Recapturing</title>
     <link href="style.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +10,7 @@
       }
 
       @page {
-        size: A4 landscape;
+        size: A3 landscape;
       }
 
       .container {
@@ -24,8 +24,8 @@
 
       .photos-diagrams {
         border: 1px dashed black;
-        height: 8in;
-        width: 100%;
+        height: 11in;
+        width: 500%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -34,18 +34,18 @@
 
       .description,
       .attention-theory {
-        margin: 20px 0;
+        margin: 10px 0;
       }
     </style>
   </head>
   <body>
     <div id="bodycontainer">
-      <h1>Coffee Seeks Its Own Level</h1>
-      <h2>Allan Wexler</h2>
+      <h1>Attention Seeking</h1>
+      <h2>Adnan kasubhai</h2>
 
       <div class="project_description">
         <h3>Description</h3>
-        <p>A short 2-3 line description of your project goes here.</p>
+        <p>Creating a system where one is free of conventional mediums, free of capitalisation of media.</p>
       </div>
 
       <div class="project_images">
@@ -53,13 +53,30 @@
         <div class="project_image">
           <img src="11202024/Attention Seeking-01.png" />
           <div class="project_image_caption">
-            Franz Erhard Walther, ‘Handlungsstücke’ (Action Pieces)
           </div>
+          <div class="project_images">
+            <h3>Photos/Diagrams</h3>
+            <div class="project_image">
+              <img src="11202024/Attention Seeking-02.png" />
+              <div class="project_image_caption">
+              </div>
+              <div class="project_images">
+                <h3>Photos/Diagrams</h3>
+                <div class="project_image">
+                  <img src="11202024/Attention Seeking-03.png" />
+                  <div class="project_image_caption">
+                  </div>
+                  <div class="project_images">
+                    <h3>Photos/Diagrams</h3>
+                    <div class="project_image">
+                      <img src="11202024/Attention Seeking-07.png" />
+                      <div class="project_image_caption">
+                      </div>
         </div>
         <div class="project_image">
-        <img src="coffee_seeks_its_own_level.jpg" />
+          <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/12670103?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="GSAPP AAD Reel"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
           <div class="project_image_caption">
-            <a href="http://www.allanwexlerstudio.com/projects/coffee-seeks-its-own-level">Allan Wexler, Coffee Seeks Its Own Level, 1990</a>
+            <a href="http://www.allanwexlerstudio.com/projects/coffee-seeks-its-own-level">The video of the gameplay and the movie</a>
           </div>
         </div>
       </div>
@@ -67,12 +84,7 @@
       <div class="attention-theory">
         <h3>Attentional Theory</h3>
         <p>
-          Ponder on your relationship to your attention. What kind of model or
-          metaphor of attention is your project articulating? Is your attention
-          something you are exercising, like a muscle? Something that is being
-          disciplined, like a pet? Something that is shaped, like a ball of
-          clay? Or something else? What kind of relationship to your attention
-          is your project hoping to shape? (300 words)
+          Need to detail out and think 
         </p>
         <p>something like hello</p>
 
