Add youtube video

--- a/student_work/Sebastian/index.html
+++ b/student_work/Sebastian/index.html
@@ -5,38 +5,6 @@
     <link href="style.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      body {
-      }
-
-      @page {
-        size: A4 landscape;
-      }
-
-      .container {
-        page-break-after: always;
-      }
-
-      h1,
-      h2 {
-        text-align: center;
-      }
-
-      .photos-diagrams {
-        border: 1px dashed black;
-        height: 8in;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 20px;
-      }
-
-      .description,
-      .attention-theory {
-        margin: 20px 0;
-      }
-    </style>
   </head>
   <body>
     <div id="bodycontainer">
@@ -56,6 +24,10 @@
         </p>
       </div>
 
+      <div>
+        <h3>Final Result</h3>
+        <iframe width="100%" height="300px" src="https://www.youtube.com/embed/bS5pCx5V8x4?si=_5PPt9baOJUA5PIT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
       <div class="project_images">
         <h3>Photos/Diagrams</h3>
         <div class="project_image">
