--- a/student_work/Adnan/index.html
+++ b/student_work/Adnan/index.html
@@ -45,7 +45,9 @@
 
       <div class="project_description">
         <h3>Description</h3>
-        <p>Creating a system where one is free of conventional mediums, free of capitalisation of media.</p>
+        <p>Creating a system where one is free of conventional mediums.
+          The idea is quite 
+        </p>
       </div>
 
       <div class="project_images">
@@ -63,8 +65,8 @@
               <div class="project_images">
                 <h3>Photos/Diagrams</h3>
                 <div class="project_image">
-                  <img src="11202024/Attention Seeking-03.png" />
-                  <div class="project_image_caption">
+                  <img src="Attention Seeking-10.png" />
+                  <div class="A console for the game - Reminding you that you have escaped.">
                   </div>
                   <div class="project_images">
                     <h3>Photos/Diagrams</h3>
