Update Sungjun Baek_Final 2.html

--- a/student_work/Sungjun/Sungjun Baek.html
+++ b/student_work/Sungjun/Sungjun Baek.html
@@ -1,2 +1,82 @@
-<img src="https://drive.google.com/file/d/1vjQSII2pJupzSGvGRET-uQdcbZeigTP6/view?usp=drive_link">
-<img src="https://drive.google.com/file/d/1vjQSII2pJupzSGvGRET-uQdcbZeigTP6/view?usp=drive_link" alt="hi" class="inline"\>
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Project Title - Attention Theory</title>
+    <link href="style.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      body {
+      }
+
+      @page {
+        size: A4 landscape;
+      }
+
+      .container {
+        page-break-after: always;
+      }
+
+      h1,
+      h2 {
+        text-align: center;
+      }
+
+      .photos-diagrams {
+        border: 1px dashed black;
+        height: 8in;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 20px;
+      }
+
+      .description,
+      .attention-theory {
+        margin: 20px 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="bodycontainer">
+      <h1>Attention seeks its own angle</h1>
+      <h2>Sungjun Baek</h2>
+
+      <div class="project_description">
+        <h3>Description</h3>
+        <p>Tactile, Auditory, Attentional buffer</p>
+      </div>
+
+      <div class="project_images">
+        <h3>Photos/Diagrams</h3>
+        <div class="project_image">
+          <img src="Metatool_Fin_Main_Sungjun.jpg" />
+          <div class="project_image_caption">
+            Attention seeks its own angle
+          </div>
+        <div class="project_image">
+          <img src="Attentional exercise.gif" />
+          <div class="project_image_caption">
+            Attentional exercise
+          </div>
+        <div class="project_image">
+          <img src="Attentional clock.gif" />
+          <div class="project_image_caption">
+            Attentional clock
+          </div>
+      </div>
+
+      <div class="attention-theory">
+        <h3>Attentional Theory</h3>
+        <p>
+People who have to do many things at the same time are easily distracted by various sensory overloads, making it difficult to focus on the task at hand. For people who do not have the option to choose where they work or study, it is important to sharpen their senses and focus quickly in the given environment.
+Vision functions as the most dominant element among the human senses It seems to be a major obstacle to forming concentration and can easily distract concentration. On the other hand, sound or music immediately creates a personal environment that is less subject to the physical environment of the recipient. Tactile senses are difficult to share with others, and they help enhance personal attention because they are an individual sensory reception process.
+
+My attentional practice aims to create an attentional buffer that prepares oneself for tasks - such as writing, designing, and reading - by including a combination of auditory and tactile senses and excluding visual elements. An object embedded with sensors that detect gyroscopes and accelerometers tracks the user's movements, and the timer only runs when the user does not maintain a constant balance for a certain period of time and moves at a varying speed. As the timer gradually decreases, the white noise sound that helps concentration gradually decreases, and the user's concentration gradually shifts from auditory to tactile while interacting with the object. Once the time required to create the attentional buffer is filled, the sound disappears and the timer stops. And then, the user performs the task in front of them.
+
+        </p>
+      </div>
+    </div>
+  </body>
+</html>
