updated to include final presentation

--- a/student_work/violet/index.html
+++ b/student_work/violet/index.html
@@ -47,7 +47,7 @@
 
       <div class="project_description">
         <h4>description</h4>
-        <p>as of today, tidy line has been a 70 day long experiment established around a combination of observational writing and daily interventions. the writing is usually centered around what is to be straightened up that evening, and the action is straightening up. the writing began as a tracing: a tracing of action, experience, and attention. it has held onto these aspect but has since evolved to a tidying in and of itself; a tidying of my mind.</p>
+        <p>as of 20 november 2024, tidy line has been a 70 day long experiment established around a combination of observational writing and daily interventions. the writing is usually centered around what is to be straightened up that evening, and the action is straightening up. the writing began as a tracing: a tracing of action, experience, and attention. it has held onto these aspect but has since evolved to a tidying in and of itself; a tidying of my mind.</p>
       </div>
 
       <div class="project_images">
@@ -81,10 +81,17 @@
     </p>
       <div class="log">
         <h4>log</h4>
-        <embed src="metatool log.pdf" type="application/pdf" width="800" height="1000">
+        <embed src="final metatool log.pdf" type="application/pdf" width="600" height="1000">
 
 
-        </div>    
+        </div> 
+       
+      <div class="final_presentation">
+          <h4>final presentation</h4>
+          <embed src="tidy line presentation.pdf" type="application/pdf" width="600" height="300">
+  
+  
+          </div> 
         </p>
             
         </div>
