final update - desc. + video

--- a/student_work/Hao/final_review/index.html
+++ b/student_work/Hao/final_review/index.html
@@ -21,8 +21,8 @@
         <br><br>
         <div class="timer">
             <svg>
-              <circle cx="50" cy="50" r="45"></circle>
-              <circle cx="50" cy="50" r="45" class="progress"></circle>
+                <circle cx="50" cy="50" r="45"></circle>
+                <circle cx="50" cy="50" r="45" class="progress"></circle>
             </svg>
                 <div class="time">60</div>
             </div>
@@ -36,6 +36,24 @@
     <div id="text-container-0">
         <div id="header">
             <h1>attentional mediums</h1>
+            <p>
+                <a href="https://youtu.be/5H70Xd1rA9s">The Looking Glass: A Media Viewer Prototype for Physical Engagement</a>
+                <br><br>
+                During the initial weeks of class, we were tasked with daily and weekly attentional practices. I began this process by utilizing a blank wall in my room to establish “focus environments,” leveraging the physical affordances of my surroundings to facilitate and experiment with sustained attention. Over time, this exercise evolved conceptually, shifting from the simplicity of observing a static surface to exploring the affordances of vertical planes as tools for attentional engagement.
+                <br><br>
+                This exploration culminated in the development of a mechanical prototype—a “clock” with motorized mask panels controlled via a webcam. The masks moved dynamically in response to the viewer's physical position, encouraging users to learn specific “physical prompts” to reveal concealed images or text. However, I soon realized that the project’s emphasis on the device risked overshadowing its larger implications regarding our interaction with everyday media objects. As a result, I chose to pivot toward a more user-centered and accessible prototype.
+                <br><br>
+                For the final iteration, I transformed the vertical plane into the familiar context of a laptop screen, developing The Looking Glass, a web-based media viewer prototype. The Looking Glass employs facial recognition technology—in this case, the clmtracker library—to capture the user's facial features via a webcam. The software generates a dynamic rectangular overlay, or "glass," that tracks the user's eyes on the screen. Through varying levels of physical engagement, such as adjusting the distance between one’s face and the screen, the overlay alters its size, proportion, and shape.
+                <br><br>
+                This interactive framework enables new attentional affordances when viewing text and images. For example:
+                <br><br>
+                Dynamic Visibility: Users can regulate their engagement to control the visibility of text. Moving closer to the screen reveals a larger portion of text, while moving further away restricts visibility. Additionally, the background color dynamically changes to black as the user distances themselves, enabling text of specific importance to stand out while other content is concealed. For instance, critical phrases or sentences can be highlighted in bright green, with the black background obscuring standard text to emphasize the highlighted elements.
+                <br><br>
+                Mood-Based Interaction: Smiling activates a secondary function, turning the background pink. Conceptually, this allows entire articles or sections to be formatted in pink text, rendering them visible only when the user maintains a smile. This interplay introduces an element of emotional and physical engagement, encouraging users to adopt specific expressions to interact with the content.
+                The Looking Glass reframes conventional screen interactions by transforming passive media consumption into a physically dynamic process. By requiring users to engage their body language and spatial awareness to access and interpret digital content, the project addresses contemporary challenges associated with screen fatigue, such as loss of focus, monotony, and inattentiveness.
+                <br><br>
+                From a broader perspective, The Looking Glass proposes a model in which physical interaction becomes integral to digital media consumption. The prototype allows users to upload their own text or images and configure interaction parameters, including text colors and boolean states, to suit different attentional needs and models. Ultimately, this project serves as an exploration of how physical affordances can reshape our relationship with screens, offering a novel approach to enhancing focus, engagement, and media perception.
+            </p>
         </div>
         <div id="image-container">
             <img class="image" src="graphic/week_2.png">
