--- a/student_work/Sungjun/Sungjun Baek.html
+++ b/student_work/Sungjun/Sungjun Baek.html
@@ -77,6 +77,9 @@ My attentional practice aims to create an attentional buffer that prepares onese
 
         </p>
       </div>
+        <a href="https://docs.google.com/presentation/d/1Iav3gvzs73L4Goe45pDLEsTrZGt2D-YISnei0f7Ynxg/edit?usp=sharing">
+          <button>Google slide</button>
+        </a>
     </div>
   </body>
 </html>
